--- a/style.scss
+++ b/style.scss
@@ -1,30 +1,35 @@
 @import "_variable.scss";
+
 body {
   box-sizing: border-box;
   margin: 0;
   padding: 0;
 }
+
 .action {
   border: 2px dashed black;
   color: #333;
   font-weight: bold;
 }
+
 .package {
   display: block;
   text-align: center;
   margin: 100px 0;
 }
-.todolist {
-  padding: 30px;
-  margin: 20px;
 
+.todolist {
+  width: 250px;
+  margin: auto;
+  padding: 30px;
   border-radius: 50px;
   border: solid 1px rgb(170, 170, 170);
   box-shadow: 15px 15px rgba(11, 131, 0, 0.877);
+
   @include tablet {
     width: 500px;
-    margin: auto;
   }
+
   &__title {
     margin-bottom: 30px;
     font-size: 40px;
@@ -34,48 +39,58 @@ body {
       font-size: 60px;
     }
   }
+
   &__bar {
     display: flex;
     justify-content: center;
     align-items: center;
   }
+
   &__text {
     padding: 10px;
-
     margin: 20px;
     width: 350px;
-
     border-radius: 50px;
+
     @include tablet {
-      height: 30px;
       font-size: 20px;
     }
   }
+
   &__addButton {
-    width: 40px;
-    height: 40px;
     background-color: black;
     color: antiquewhite;
     font-weight: bold;
     font-size: 20px;
     border-radius: 100px;
     transition: box-shadow 0.5s;
+
+    @include tablet {
+      width: 40px;
+      height: 40px;
+    }
   }
 
   &__state {
     display: flex;
     justify-content: center;
   }
+
   &__tabBar {
     display: flex;
     justify-content: space-around;
+    border-bottom: solid 1px black;
 
-    border-bottom: solid 2px black;
+    @include tablet {
+      border-bottom: solid 2px black;
+    }
   }
+
   &__tab {
     width: 80px;
     border-radius: 100px;
     font-weight: bold;
+
     @include tablet {
       padding: 5px;
       margin: 20px;
@@ -84,7 +99,9 @@ body {
 }
 
 .todolist__addButton:hover {
-  box-shadow: 5px 5px rgba(10, 99, 2, 0.733);
+  @include tablet {
+    box-shadow: 5px 5px rgba(10, 99, 2, 0.733);
+  }
 }
 
 .content {
@@ -92,37 +109,47 @@ body {
   align-items: center;
   list-style: none;
   margin: 0 5px;
+
   @include tablet {
     margin: 30px;
   }
+
   &__checkboxBar {
     display: flex;
     justify-content: center;
     align-items: center;
-    margin: 10px;
+    margin: 20px 10px 10px 10px;
+
     @include tablet {
       justify-content: start;
       width: 500px;
+      margin: 10px;
     }
   }
+
   &__checkbox {
     width: 20px;
     height: 20px;
     color: rgb(255, 187, 0);
   }
+
   &__text {
     word-wrap: break-word;
     text-align: left;
     width: 300px;
-    font-size: 20px;
+    font-size: 15px;
     font-weight: bold;
     margin: 10px;
-    padding-bottom: 10px;
+    padding-bottom: 5px;
     border-bottom: solid 1px rgb(97, 97, 97);
+
     @include tablet {
       margin: 0 50px 0 20px;
+      padding-bottom: 10px;
+      font-size: 20px;
     }
   }
+
   &__delete {
     background-color: black;
     color: antiquewhite;
@@ -130,32 +157,46 @@ body {
 
     border-radius: 100px;
     transition: box-shadow 0.5s;
+
     @include tablet {
       font-size: 20px;
     }
   }
 }
+
 .content__delete:hover {
-  box-shadow: 5px 5px rgb(16, 75, 11);
+  @include tablet {
+    box-shadow: 5px 5px rgb(16, 75, 11);
+  }
 }
 
 .footer {
-  display: flex;
-  justify-content: space-around;
-  align-items: center;
+  display: block;
   padding-top: 20px;
 
+  @include tablet {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+  }
+
   &__allDelete {
-    padding: 10px;
+    margin: 5px;
+    padding: 5px;
     background-color: black;
     color: antiquewhite;
-
-    font-size: 15px;
     border-radius: 100px;
     transition: box-shadow 0.5s;
+
+    @include tablet {
+      padding: 10px;
+      font-size: 15px;
+    }
   }
 }
 
 .footer__allDelete:hover {
-  box-shadow: 5px 5px rgba(11, 131, 0, 0.733);
+  @include tablet {
+    box-shadow: 5px 5px rgba(11, 131, 0, 0.733);
+  }
 }
